--- a/src/style.css
+++ b/src/style.css
@@ -48,8 +48,8 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
   }
 
   #apps{
-        height: 20vh;
-        width: 20vh;
+        max-height: 20vh;
+        width: 7vw;
       border-radius: 50%;
       background-color: yellow;
       color: orange;
@@ -59,8 +59,8 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
       grid-template-rows: 3;
   }
   #journey{
-    height: 20vh;
-    width: 20vh;
+    max-height: 20vh;
+    width: 7vw;
     border-radius: 50%;
     background-color: orange;
     color: yellow;
@@ -72,8 +72,8 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
   }
 
   #resources{
-    height: 20vh;
-    width: 20vh;
+    max-height: 20vh;
+    width: 7vw;
     border-radius: 50%;
     background-color: yellow;
     color: orange;
@@ -85,8 +85,8 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
   }
 
   #pod{
-    height: 20vh;
-    width: 20vh;
+    max-height: 20vh;
+    width: 7vw;
     border-radius: 50%;
     background-color: orange;
     color: yellow;
@@ -130,7 +130,7 @@ background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
     color: white;
     border-radius: 30%;
     height: 25vh;
-    width: 25vh;
+    width: 10vw;
     border: 1px solid orange;
       
   }
@@ -184,6 +184,25 @@ a{
   }
 
 
+@media screen and (max-width:500px) {
+  #javaContent{
+    grid-template-columns: repeat(2, 1fr);}
+
+    #javaContent #newCont{
+      font-size: 3vh;
+      color: white;
+      grid-column: 2;
+    }
+
+    #javaContent img{
+      max-height: 30vh;
+      max-width: 30vw;
+      grid-column: 1;
+    }
+  }
+
+
+  
 
 
   
