--- a/src/style.css
+++ b/src/style.css
@@ -216,14 +216,49 @@ a{
   grid-column: 3;
   grid-row: 1;
   font-size: 1vh;
-  background-color: #f5d020;
-background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
 color: white;
-border-radius: 30%;
-max-height: 20vh;
-max-width: 10vw;
-border: 1px solid orange;
+
   
+}
+
+#apps{
+color: orange;
+text-align: center;
+grid-column: 1;
+display: grid;
+grid-template-rows: 3;
+}
+#journey{
+
+color: yellow;
+text-align: center;
+grid-column: 2;
+display: grid;
+grid-template-rows: 3;
+
+}
+
+#resources{
+
+color: orange;
+text-align: center;
+grid-column: 3;
+display: grid;
+grid-template-rows: 3;
+
+}
+
+#pod{
+color: yellow;
+text-align: center;
+grid-column: 4;
+display: grid;
+grid-template-rows: 3;
+
+}
+
+#navBar{
+  column-gap: 1vw;
 }
   }
 
