--- a/src/style.css
+++ b/src/style.css
@@ -160,6 +160,32 @@ background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
     grid-column: 3;
   }
 
+  #slideShow{
+    grid-row: 3;
+    grid-column: 1/4;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+  }
+
+  #mainSlide{
+    grid-column: 2;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  #mainSlideCont{
+    grid-column: 2;
+  }
+
+  #mainSlide img{
+    grid-column: 1;
+  }
+
+  #slideShow img{
+    max-height: 30vh;
+  }
+
   li{
     margin: 1vh;
   }
@@ -222,6 +248,7 @@ color: white;
 }
 
 #apps{
+  background: "";
 color: orange;
 text-align: center;
 grid-column: 1;
@@ -229,7 +256,7 @@ display: grid;
 grid-template-rows: 3;
 }
 #journey{
-
+  background: "";
 color: yellow;
 text-align: center;
 grid-column: 2;
@@ -239,7 +266,7 @@ grid-template-rows: 3;
 }
 
 #resources{
-
+background: "";
 color: orange;
 text-align: center;
 grid-column: 3;
@@ -249,6 +276,7 @@ grid-template-rows: 3;
 }
 
 #pod{
+  background: "";
 color: yellow;
 text-align: center;
 grid-column: 4;
@@ -260,6 +288,17 @@ grid-template-rows: 3;
 #navBar{
   column-gap: 1vw;
 }
+#mainSlide{
+  grid-column: 1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#slideShow img{
+  max-height: 30vh;
+  max-width: 30vw;
+}
+
   }
 
 
