--- a/src/style.css
+++ b/src/style.css
@@ -227,6 +227,8 @@ a{
 
 
 
+
+
 @media screen and (max-width:500px) {
   #javaContent{
     grid-template-columns: repeat(2, 1fr);}
@@ -258,6 +260,7 @@ a{
   grid-row: 1;
   font-size: 1vh;
 color: white;
+display: none;
 
   
 }
@@ -267,7 +270,7 @@ color: white;
 color: orange;
 text-align: center;
 grid-column: 1;
-display: grid;
+display: none;
 grid-template-rows: 3;
 }
 #journey{
@@ -275,7 +278,7 @@ grid-template-rows: 3;
 color: yellow;
 text-align: center;
 grid-column: 2;
-display: grid;
+display: none;
 grid-template-rows: 3;
 
 }
@@ -285,7 +288,7 @@ background-color: "";
 color: orange;
 text-align: center;
 grid-column: 3;
-display: grid;
+display: none;
 grid-template-rows: 3;
 
 }
@@ -295,7 +298,7 @@ grid-template-rows: 3;
 color: yellow;
 text-align: center;
 grid-column: 4;
-display: grid;
+display: none;
 grid-template-rows: 3;
 
 }
@@ -304,7 +307,7 @@ grid-template-rows: 3;
   column-gap: 1vw;
 }
 #mainSlide{
-  grid-column: 1;
+  grid-column: 1/3;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
