--- a/src/style.css
+++ b/src/style.css
@@ -354,29 +354,11 @@ grid-template-rows: 3;
   max-width: 30vw;
 }
 
-#mobileHamburger{
-  grid-column: 3;
-  grid-row: 1;
-  display: none;
-  grid-template-rows: 0.5fr, 0.5fr, 0.5fr, 0.5fr, 0.5fr, 0.5fr, 0.5fr;
-  grid-template-columns: 1;
+#apps:hover, #journey:hover, #resources:hover, #pod:hover{
+  transform: scale(1.1);
 }
 
-#line1{
-  grid-row: 1;
-  border-bottom: 1px solid yellow;
-  margin-bottom: 1px;
-}
-#line2{
-  grid-row: 2;
-  border-bottom: 1px solid yellow;
-  margin-bottom: 1px;
-}
-#line3{
-  grid-row: 3;
-  border-bottom: 1px solid yellow;
-  margin-bottom: 1px;
-}
+
 
   }
 
