mobile optimization of overlay form

--- a/src/style.css
+++ b/src/style.css
@@ -357,6 +357,18 @@ grid-template-rows: 3;
 #apps:hover, #journey:hover, #resources:hover, #pod:hover{
   transform: scale(1.1);
 }
+#overlay {
+  position: fixed; /* Sit on top of the page content */
+  display: none; /* Hidden by default */
+  top: 30vh;
+  font-size: 2vh;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.829); /* Black background with opacity */
+  color: white;
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  text-align: center;
+}
 
 
 
