--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body{
-  background-color: #eb4511;
-background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
+  background-color: #485461;
+background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
 
     color: whitesmoke;
 }
@@ -25,7 +25,7 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
     height: 0; 
     border-left: 5vw solid transparent;
     border-right: 5vw solid transparent;
-    border-bottom: 10vh solid yellow;
+    border-bottom: 10vh solid lightgreen;
   }
   #bubble2 {
     grid-column: 1;
@@ -34,7 +34,7 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
     height: 0; 
     border-left: 5vw solid transparent;
     border-right: 5vw solid transparent;
-    border-top: 10vh solid orange;
+    border-top: 10vh solid darkgreen;
   }
 
   #siteName{
@@ -52,8 +52,8 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
         max-height: 20vh;
         max-width: 7vw;
       border-radius: 50%;
-      background-color: yellow;
-      color: orange;
+      background-color: lightgreen;
+      color: darkgreen;
       text-align: center;
       grid-column: 1;
       display: grid;
@@ -63,8 +63,8 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
     max-height: 20vh;
     max-width: 7vw;
     border-radius: 50%;
-    background-color: orange;
-    color: yellow;
+    background-color: darkgreen;
+    color: lightgreen;
     text-align: center;
     grid-column: 2;
     display: grid;
@@ -76,8 +76,8 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
     max-height: 20vh;
     max-width: 7vw;
     border-radius: 50%;
-    background-color: yellow;
-    color: orange;
+    background-color: lightgreen;
+    color: darkgreen;
     text-align: center;
     grid-column: 3;
     display: grid;
@@ -89,8 +89,8 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
     max-height: 20vh;
     max-width: 7vw;
     border-radius: 50%;
-    background-color: orange;
-    color: yellow;
+    background-color: darkgreen;
+    color: lightgreen;
     text-align: center;
     grid-column: 4;
     display: grid;
@@ -109,8 +109,9 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
   }
 
   #apps:hover, #journey:hover, #pod:hover, #resources:hover{
-      background-color: #f5d020;
-      background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
+    background-color: #63d471;
+    background-image: linear-gradient(315deg, #63d471 0%, #233329 74%);
+    
         color: white;
 
   }
@@ -126,20 +127,20 @@ background-image: linear-gradient(315deg, #eb4511 0%, #b02e0c 74%);
       grid-column: 3;
       grid-row: 1;
       font-size: 2vh;
-      background-color: #f5d020;
-background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
+      background-color: #63d471;
+    background-image: linear-gradient(315deg, #63d471 0%, #233329 74%);
     color: white;
     border-radius: 30%;
     height: 25vh;
     width: 10vw;
-    border: 1px solid orange;
+    border: 1px solid black;
       
   }
 
   #subscriber:hover{
     cursor: pointer;
     transform: scale(1.2);
-    border: 1px solid orange;
+    border: 1px solid darkgreen;
   }
 
   #javaContent{
@@ -191,7 +192,7 @@ background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
     margin: 1vh;
   }
 a{
-  color: yellow;
+  color: lightgreen;
 }
 
 #title:hover{
@@ -284,7 +285,6 @@ display: grid;
   max-height: 0vh;
         max-width: 0vw;
   border-radius: 0%;
-color: orange;
 text-align: center;
 grid-column: 1;
 grid-row: 1;
@@ -300,7 +300,6 @@ grid-template-rows: 3;
   max-height: 0vh;
         max-width: 0vw;
   border-radius: 0%;
-color: yellow;
 text-align: center;
 grid-column: 1;
 grid-row: 2;
@@ -318,7 +317,6 @@ grid-template-rows: 3;
   max-height: 0vh;
         max-width: 0vw;
   border-radius: 0%;
-color: orange;
 text-align: center;
 grid-column: 1;
 grid-row: 3;
@@ -331,7 +329,6 @@ grid-template-rows: 3;
   max-height: 0vh;
   max-width: 0vw;
 border-radius: 0%;
-color: yellow;
 text-align: center;
 grid-column: 1;
 grid-row: 4;
