--- a/src/style.css
+++ b/src/style.css
@@ -231,6 +231,7 @@ a{
 
 .coins *{
   position: fixed;
+  display: inline-block;
   top: 10vh;
   padding: 0.5vw;
   border-radius: 50%;
@@ -240,6 +241,7 @@ a{
 
 .dollars *{
   position: fixed;
+  display: inline-block;
   top: 10vh;
   padding-left: 3vw;
   padding-right: 3vw;
