--- a/src/style.css
+++ b/src/style.css
@@ -236,6 +236,7 @@ a{
   padding: 0.5vw;
   border-radius: 50%;
   background-color: goldenrod;
+  -webkit-animation: coinFalling 7s forwards;
   animation: coinFalling 7s forwards;
 }
 
@@ -248,6 +249,7 @@ a{
   padding-top: 2vh;
   padding-bottom: 2vh;
   background-color: rgba(17, 140, 79, 0.829);
+  -webkit-animation: coinFalling 7s forwards;
   animation: coinFalling 10s forwards;
 
 }
@@ -335,6 +337,27 @@ a{
 
 
 @keyframes coinFalling {
+  0%{
+    top: 0vh;
+    rotate: 50deg;
+  }
+  20%{
+    rotate: -50deg;
+  }
+
+  50%{
+    rotate: 50deg;
+  }
+
+  100%{
+    top: 80vh;
+    rotate: -50deg;
+    
+  }
+  
+}
+
+@-webkit-keyframes coinFalling {
   0%{
     top: 0vh;
     rotate: 50deg;
